# xenoeye

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CONFIG.md  CONFIG.ru.md  Dockerfile  EXTRA.md  EXTRA.ru.md  INTERNALS.md  INTERNALS.ru.md  LICENSE  Makefile.am  README.md  README.n.ru.md  README.ru.md  STEP-BY-STEP.md  STEP-BY-STEP.ru.md  classification.c  configure.ac  devices.c  devices.conf  devices.h  docker-compose-dev.yml  docker-compose.yml  filter-ag.def  filter-lexer.c  filter-parser-funcs.c  filter-parser.c  filter.c  filter.def  filter.h  filter_lexer.c  filter_parser.c  flow-debug.c  flow-debug.h  flow-info.h  flow_debug.c  flow_debug.h  geoip.c  (+48 more)
.github/workflows/: c.yml
lxc/: xenoeye.service
lxc/grafana/: AS_GeoIP.json  AS_GeoIP6.json  DoS_DDoS.json  DoS_DDoS6.json  Overview.json  Overview6.json  Routers.json  Routers6.json
lxc/mo/mynet-egress/: mo.conf
lxc/mo/mynet-egress6/: mo.conf
lxc/mo/mynet-ingress/: mo.conf
lxc/mo/mynet-ingress/frag/: mo.conf
lxc/mo/mynet-ingress/icmp/: mo.conf
lxc/mo/mynet-ingress/tcp/: mo.conf
lxc/mo/mynet-ingress/tcp/syn/: mo.conf
lxc/mo/mynet-ingress/udp/: mo.conf
lxc/mo/mynet-ingress/udp/dns-amp/: mo.conf
lxc/mo/mynet-ingress/udp/ntp-amp/: mo.conf
lxc/mo/mynet-ingress6/: mo.conf
lxc/mo/mynet-ingress6/frag/: mo.conf
lxc/mo/mynet-ingress6/icmp/: mo.conf
lxc/mo/mynet-ingress6/tcp/: mo.conf
lxc/mo/mynet-ingress6/tcp/syn/: mo.conf
lxc/mo/mynet-ingress6/udp/: mo.conf
lxc/mo/mynet-ingress6/udp/dns-amp/: mo.conf
lxc/mo/mynet-ingress6/udp/ntp-amp/: mo.conf
m4/: ax_pthread.m4
scripts/: fill-db.sh  mkchart-gnuplot.sh  mkchart-matplotlib-donut-as.py  mkchart-matplotlib-donut-prot.py  mkchart-matplotlib-ts-ip.py  mkchart-matplotlib-ts.py  mkchart-prot-mpl.py  xe-dbexport-ch.sh  xe-dbexport-pg.sh
scripts/telegram-bot/: on-start.sh  on-stop.sh  xe-tele-bot-aio3.py  xe-tele-bot.py
tests/: Makefile.am  test1.c  test_filters.c
www/flask/: app.py
www/flask/templates/: dashboard-err.html  dashboard.html  login.html
www/flask/xe-tmpl/: default.json
